fix mobile collapse css & Stars Keys

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -9,6 +9,9 @@
     &-collapse {
         margin: auto;
         width: 80%;
+        @media (max-width: $screen_mobile) {
+            width: 100%;
+        }
     }
 
 }
