--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -2,6 +2,11 @@
 
 .kasa-banner {
     position: relative;
+    margin-bottom: 43px;
+    @media (max-width: $screen_mobile) {
+        margin-bottom: 22px;
+      }
+
     img {
         width: 100%;
         height: 220px;
@@ -18,6 +23,7 @@
         font-weight: 500;
         font-size: 48px;
         @media (max-width: $screen_mobile) {
+            left: 5%;
             font-size: 24px;
           }
     }
